Fix setting bar overflow value error.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,7 +77,7 @@ body {
 
     box-shadow: -5px 0 4px;
 
-    overflow: auto;
+    overflow: overlay;
 }
 
 .setting div {
